--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %><br>
+    
+    <%= form.label :name %>
     <%= form.text_field :name %>
     <%= form.file_field :file %>
-  </div>
-  <div class="actions">
     <%= form.submit %>
+
   </div>
 <% end %>
