--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<h3>Репозиторий Международного Университета Информационных Технологий</h3>
+<%= link_to 'добавить файл', new_post_path %>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.name %></td>
-        <td><%= link_to 'Get', post.file.url %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><h4><%= post.name %></h4></td>
+        <td><h6><%= link_to 'скачать', post.file.url %></h6></td>
+        <td><h6><%= post.created_at.strftime("%Y/%m/%d") %></h6></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +17,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+
