Update table view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag "lowcoster-banner.gif" %>
+
 <h3>Репозиторий Международного Университета Информационных Технологий</h3>
 <%= link_to 'добавить файл', new_post_path %>
 
