--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <table class="field">
     
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-    <%= form.file_field :file %>
-    <%= form.submit %>
+    <td><%= form.label "Название" %></td>
+    <td><%= form.text_field :name %></td>
+    <td><%= form.file_field :file %></td>
+    <td><%= form.submit "Создать" %></td>
 
-  </div>
+  </table>
 <% end %>
