--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,13 +3,37 @@
 <%= image_tag "lowcoster-banner.gif" %>
 
 <h3>Репозиторий Международного Университета Информационных Технологий</h3>
-<%= link_to 'добавить файл', new_post_path %>
+
+
+<%= form_for @post, url: posts_path, html: { multipart: true } do |form| %>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+      <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <table class="field">
+    
+    <td><%= form.label "Название" %></td>
+    <td><%= form.text_field :name %></td>
+    <td><%= form.file_field :file %></td>
+    <td><%= form.submit "Создать" %></td>
+
+  </table>
+<% end %><br>
+
 
 <table>
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><h4><%= post.name %></h4></td>
+        <td><h5 class="name"><%= post.name %></h5></td>
         <td></td>
         <td><h6><%= link_to 'скачать', post.file.url %></h6></td>
         <td><h6><%= post.created_at.strftime("%Y/%m/%d") %></h6></td>
